# python-project-83

./: 1  1.pub  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
page_analyzer/: __init__.py  app.py  check.py  page_analyzer.py  parser.py  repository.py  validator.py
page_analyzer/templates/: checks.html  index.html  main.html  show.html  showall.html  url.html  urls.html
